# nil

./: .gitignore  LICENSE  Makefile  nil.cabal  package.yaml
app/: Cli.hs  Main.hs
example/: about.lang
example/zkp-age-over-19/: age-over-19.lang  prover.json  verifier.json
src/: Nil.hs
src/Nil/: Base.hs  C.hs  Circuit.hs  Curve.hs  Data.hs  ECdata.hs  Ecdata.hs  Ecdsa.hs  Eval.hs  Evaluator.hs  Field.hs  Graph.hs  Lexer.hs  Pairing.hs  Parser.hs  Pinocchio.hs  Poly.hs  PolyS.hs  Qap.hs  Reorg.hs  Shamir.hs  Sign.hs  Utils.hs
test/: Examples.hs
