cabal-version:      3.6
name:               nil
version:            0.1.0.0
synopsis:           Zero-Knowledge Suite in parallelism
description:        .
                    .
category:           Crypto, Cryptography
author:             Francis Lim
maintainer:         thyeem@gmail.com
license:            MIT
license-file:       LICENSE
build-type:         Simple

extra-source-files: README.md

library
  hs-source-dirs:
      src
  build-depends:
      base
    , aeson
    , base16-bytestring
    , base64-bytestring
    , blake2
    , bytestring
    , containers
    , cryptohash-sha256
    , cryptohash-sha512
    , deepseq
    , entropy
    , filepath
    , parallel
    , pretty-simple
    , process
    , QuickCheck
    , random
    , store
    , text
  exposed-modules:
      Nil
  other-modules:
      Paths_nil
      Nil.Base
      Nil.Field
      Nil.Poly
      Nil.PolyS
      Nil.Shamir
      Nil.Utils
  default-language: Haskell2010

executable nil
    hs-source-dirs:
        app
    main-is:
        Main.hs
    build-depends:
        base
      , nil
      , optparse-applicative
    default-language: Haskell2010

test-suite test
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    main-is:
        Spec.hs
    build-tool-depends:
        hspec-discover:hspec-discover >=2.0 && <3.0
    ghc-options:
        -threaded
    build-depends:
        base
      , hspec
      , hspec-discover
      , QuickCheck
      , nil
    other-modules:
        NilSpec
    default-language: Haskell2010
